@startuml package

package controller{
    interface Action{}
    class Option{}
    class OptionList{}
    Option <--o OptionList
    Option ..> Action
}

package model{
    package user {}
    package gerarchia{}
}
package db{
    class DbConnect {}
    class JsonUtil{}
    class MyMenu{}
    class InputDati{}
}

controller ..> model: use
controller ..> db: use


@enduml